More fidgeting around with css to solve scroll issue on mobile browser.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -25,6 +25,7 @@ body {
 #goblin-body {
   width: 100%;
   height: 80vh;
+  overflow-y: hidden;
 }
 
 #goblin-foot {
